25-Jun-2019 V0.13 Update development workflows and cleanup
28-Jun-2019 V0.14 Migrating code from py-rcsb_utils_anal module for entity instance extraction
 4-Sep-2019 V0.15 Added tree, chemical reference loader operations and pipeline build tooling
17-Sep-2019 V0.16 Update to latest schemas
30-Sep-2019 V0.17 Updates for chemical reference and tree cli's and update dependencies
15-Oct-2019 V0.18 Refactor, add TaxonomyExtractor(), ReferenceSequenceAssignmentUpdater() and friends.
16-Oct-2019 V0.19 Checkpoint in improving update reference sequences and troubleshooting tree node lists for ATC
17-Oct-2019 V0.20 Checkpoint in refactoring reference sequence update processing.
18-Oct-2019 V0.21 Test version of document-level update of reference sequence assignments
18-Oct-2019 V0.22 Update cache file management
18-Oct-2019 V0.23 Adjust filter behavior, turn off test mode, fix Py27 test parameter.
19-Oct-2019 V0.24 Handle miscellaneous issues in reference sequence processing from Oct 18 full load
20-Oct-2019 V0.25 Handle duplicates from inconsistent struct_ref_* records
 5-Dec-2019 V0.26 Add support for entity typed schema and update dependencies.
 6-Dec-2019 V0.27 Add match index cache recovery.1
11-Dec-2019 V0.28 Adding reference sequence loader and moving pipeline to py38.
15-Dec-2019 V0.29 Added methods to load UniProt features
17-Dec-2019 V0.30 Pre-filter GOIDs and add ExDbWorkflow module with simple wf entry points
20-Dec-2019 V0.31 Adjust package definition
23-Dec-2019 V0.32 Change protocol for supplementing accessions and EC annotations.
04-Jan-2020 V0.33 Add support for rcsb_polymer_entity.rcsb_enzyme_class_combined_depth
09-Jan-2020 V0.34 Add additional cache test criteria for UniProt match cache.
10-Jan-2020 V0.35 Update dependencies for rcsb.utils.go and rcsb.utils.struct
23-Jan-2020 V0.36 Changes to support pre-beta-v1 schema reorganization with the addition of rcsb_polymer_entity_annotation